Minor issue fixed, codebase change required

--- a/Synthesizer_DS.ipynb
+++ b/Synthesizer_DS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTZGc9sve8RTidu10oVevk",
+      "authorship_tag": "ABX9TyP5B6neZI3EYQH82TxB01Go",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,20 +28,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "3tFtOr_oIEDH",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4e7943d0-84c4-45b5-c44e-d83bcabc0ff9"
+        "outputId": "cd92e963-114f-42f6-cc9a-fa2096cae2eb"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -71,7 +71,7 @@
       "metadata": {
         "id": "HF6Hx5x6INTE"
       },
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -88,7 +88,7 @@
       "metadata": {
         "id": "4opa2TAuL3oR"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -103,7 +103,7 @@
       "metadata": {
         "id": "rncmCTFaL9CC"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -116,7 +116,7 @@
       "metadata": {
         "id": "Xwoydi3IMR_I"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -129,7 +129,7 @@
       "metadata": {
         "id": "bjWxH3H5MXvO"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -152,7 +152,7 @@
       "metadata": {
         "id": "q8b9LojHMd4s"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -201,7 +201,7 @@
       "metadata": {
         "id": "WVtn5kvZMzxe"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -222,7 +222,7 @@
       "metadata": {
         "id": "hguhNCY0NGqA"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -234,8 +234,164 @@
       "metadata": {
         "id": "fwCEr05cNH2a"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import random\n",
+        "from datetime import datetime, timedelta\n",
+        "from google.colab import drive\n",
+        "\n",
+        "# Mount Google Drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "base_path = '/content/drive/MyDrive/Syn_DS/Profiles/'\n",
+        "\n",
+        "amount_df = pd.read_excel(base_path + 'Amount_Profile.xlsx')\n",
+        "device_df = pd.read_excel(base_path + 'Device_Network_Profile.xlsx')\n",
+        "location_df = pd.read_excel(base_path + 'Location_Profile.xlsx')\n",
+        "temporal_df = pd.read_excel(base_path + 'Temporal_Profile.xlsx')\n",
+        "txn_type_df = pd.read_excel(base_path + 'Txn_Type_Profile.xlsx')\n",
+        "text_df = pd.read_excel(base_path + 'Texual_Profile.xlsx') # Corrected typo from text_profile.xlsx\n",
+        "velocity_df = pd.read_excel(base_path + 'Velocity_Profile.xlsx')\n",
+        "\n",
+        "# Weighted random pick\n",
+        "def weighted_choice(df, value_col, weight_col):\n",
+        "    return random.choices(df[value_col].tolist(), weights=df[weight_col].tolist(), k=1)[0]\n",
+        "\n",
+        "# Random datetime\n",
+        "def random_datetime():\n",
+        "    start = datetime(2024, 1, 1)\n",
+        "    end = datetime(2024, 12, 31)\n",
+        "    return start + (end - start) * random.random()\n",
+        "\n",
+        "# Txn_ID generator\n",
+        "def generate_txn_id():\n",
+        "    return \"TXN\" + str(random.randint(10**9, 10**10-1))\n",
+        "\n",
+        "# Account generator\n",
+        "def generate_account():\n",
+        "    return \"AC\" + str(random.randint(1000000000, 9999999999))\n",
+        "\n",
+        "# Coordinate jitter ±0.003 ~ 300m\n",
+        "def jitter_coords(lat, lon):\n",
+        "    lat_jit = lat + np.random.uniform(-0.003, 0.003)\n",
+        "    lon_jit = lon + np.random.uniform(-0.003, 0.003)\n",
+        "    return lat_jit, lon_jit\n",
+        "\n",
+        "TOTAL_USERS = 5000\n",
+        "users = []\n",
+        "\n",
+        "for i in range(TOTAL_USERS):\n",
+        "    users.append({\n",
+        "        \"User_ID\": f\"U{i+10000}\",\n",
+        "        \"Velocity_Type\": weighted_choice(velocity_df, \"Velocity_Type\", \"User_%\")\n",
+        "    })\n",
+        "\n",
+        "users_df = pd.DataFrame(users)\n",
+        "\n",
+        "transactions = []\n",
+        "\n",
+        "for _, user in users_df.iterrows():\n",
+        "    txn_count = random.randint(5, 25)\n",
+        "\n",
+        "    for _ in range(txn_count):\n",
+        "        txn_type = weighted_choice(txn_type_df, \"Txn_Type\", \"Txn_%\")\n",
+        "        device = weighted_choice(device_df, \"Device\", \"Usage_%\")\n",
+        "        txn_time = random_datetime()\n",
+        "        amount = round(random.uniform(50, 50000),2)\n",
+        "        resp_code = random.choice([\"00\",\"05\",\"12\",\"91\"])\n",
+        "\n",
+        "        # Weighted city pick\n",
+        "        city = weighted_choice(location_df, \"City\", \"Txn_%\")\n",
+        "\n",
+        "        # Base coordinates + jitter\n",
+        "        base_lat = city_coordinates.loc[city_coordinates['City']==city, 'Latitude'].values[0]\n",
+        "        base_lon = city_coordinates.loc[city_coordinates['City']==city, 'Longitude'].values[0]\n",
+        "        lat_jit, lon_jit = jitter_coords(base_lat, base_lon)\n",
+        "\n",
+        "        # Fraud label logic\n",
+        "        risk = 0\n",
+        "        if amount > 30000:\n",
+        "            risk += 1\n",
+        "        if resp_code != \"00\":\n",
+        "            risk += 1\n",
+        "        if device == \"Unknown\":\n",
+        "            risk += 1\n",
+        "        fraud_label = 1 if risk >= 2 else 0\n",
+        "\n",
+        "        transactions.append({\n",
+        "            \"Txn_ID\": generate_txn_id(),\n",
+        "            \"User_ID\": user[\"User_ID\"],\n",
+        "            \"Tran_Source\": device,\n",
+        "            \"Create_Date\": txn_time,\n",
+        "            \"Txn_Amount\": amount,\n",
+        "            \"From_Account\": generate_account(),\n",
+        "            \"To_Account\": generate_account(),\n",
+        "            \"Resp_Code\": resp_code,\n",
+        "            \"Tracer_No\": random.randint(100000,999999),\n",
+        "            \"Txn_Type\": txn_type,\n",
+        "            \"Particulars\": f\"{txn_type} Transaction\",\n",
+        "            \"Remarks\": \"Successful\" if resp_code==\"00\" else \"Failed\",\n",
+        "            \"Device\": device,\n",
+        "            \"IP_Address\": f\"192.168.{random.randint(1,255)}.{random.randint(1,255)}\",\n",
+        "            \"Location\": city,\n",
+        "            \"Country\": \"Bangladesh\",\n",
+        "            \"city_by_coordinates\": f\"{lat_jit},{lon_jit}\",\n",
+        "            \"city_name\": city,\n",
+        "            \"Fraud_Label\": fraud_label\n",
+        "        })\n",
+        "\n",
+        "synthetic_df = pd.DataFrame(transactions)\n",
+        "\n",
+        "# Save to Drive\n",
+        "synthetic_df.to_csv('/content/drive/MyDrive/profiles/synthetic_transactions_fixed.csv', index=False)\n",
+        "print(\"Synthetic dataset with city & coordinates fix ready in Drive!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 584
+        },
+        "id": "YsYAEv3Xlbs1",
+        "outputId": "08ef3480-98e4-4a55-d992-f67b55046225"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyError",
+          "evalue": "'Velocity_Type'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3805\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3806\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32mindex.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mindex.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: 'Velocity_Type'",
+            "\nThe above exception was the direct cause of the following exception:\n",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1697123165.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     48\u001b[0m     users.append({\n\u001b[1;32m     49\u001b[0m         \u001b[0;34m\"User_ID\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34mf\"U{i+10000}\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m         \u001b[0;34m\"Velocity_Type\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mweighted_choice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvelocity_df\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Velocity_Type\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"User_%\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     51\u001b[0m     })\n\u001b[1;32m     52\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-1697123165.py\u001b[0m in \u001b[0;36mweighted_choice\u001b[0;34m(df, value_col, weight_col)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;31m# Weighted random pick\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mweighted_choice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue_col\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight_col\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoices\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mvalue_col\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweights\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mweight_col\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;31m# Random datetime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4100\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4101\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4102\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4103\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4104\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3810\u001b[0m             ):\n\u001b[1;32m   3811\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mInvalidIndexError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3812\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3813\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3814\u001b[0m             \u001b[0;31m# If we have a listlike key, _check_indexing_error will raise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: 'Velocity_Type'"
+          ]
+        }
+      ]
     }
   ]
 }
